# dpi-sys

./: Cargo.toml  build.rs
examples/: append.rs
include/: config.h  context.h  create_buffer.h  err_codes.h  init.h  server.h
src/: config.cc  context.cc  create_buffer.cc  ffi.rs  init.cc  lib.rs  server.cc
